// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'$なかなかに強いです' > '-' 1`] = `""`;

exports[`'$なかなかに強いです' > 'link' 1`] = `"<a href="https://yomikiri.test/">Yomikiri Tests</a>"`;

exports[`'$なかなかに強いです' > 'meaning (div) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">very, considerably</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">by no means, not readily</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">middle, half-way point</div>
      <div class="yomi-meaning">excellent, wonderful</div>
    </div>
  </div>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (div) (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(adverb, na-adjective)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">very, considerably</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-pos">(adverb)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">by no means, not readily</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-pos">(noun)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">middle, half-way point</div>
      <div class="yomi-meaning">excellent, wonderful</div>
    </div>
  </div>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (div) (pos)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(adverb, na-adjective)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">very, considerably, easily, readily, fairly, quite, highly, rather</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-pos">(adverb)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">by no means, not readily</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-pos">(noun)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">middle, half-way point</div>
      <div class="yomi-meaning">excellent, wonderful, very good</div>
    </div>
  </div>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (div)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">very, considerably, easily, readily, fairly, quite, highly, rather</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">by no means, not readily</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">middle, half-way point</div>
      <div class="yomi-meaning">excellent, wonderful, very good</div>
    </div>
  </div>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (item-full <= 2)' 1`] = `
"<ol>
  <li>very, considerably</li>
</ol>
<ol>
  <li>by no means, not readily</li>
</ol>
<ol>
  <li>middle, half-way point</li>
  <li>excellent, wonderful</li>
</ol>"
`;

exports[`'$なかなかに強いです' > 'meaning (line) (item-full <= 2)' 1`] = `"very, considerably; by no means, not readily; middle, half-way point; excellent, wonderful"`;

exports[`'$なかなかに強いです' > 'meaning (line) (pos) (item-full <= 2)' 1`] = `"(adverb, na-adjective) very, considerably; (adverb) by no means, not readily; (noun) middle, half-way point; excellent, wonderful"`;

exports[`'$なかなかに強いです' > 'meaning (line) (pos)' 1`] = `"(adverb, na-adjective) very, considerably, easily, readily, fairly, quite, highly, rather; (adverb) by no means, not readily; (noun) middle, half-way point; excellent, wonderful, very good"`;

exports[`'$なかなかに強いです' > 'meaning (line)' 1`] = `"very, considerably, easily, readily, fairly, quite, highly, rather; by no means, not readily; middle, half-way point; excellent, wonderful, very good"`;

exports[`'$なかなかに強いです' > 'meaning (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-pos">(adverb, na-adjective)</div>
<ol>
  <li>very, considerably</li>
</ol>
<div class="yomi-pos">(adverb)</div>
<ol>
  <li>by no means, not readily</li>
</ol>
<div class="yomi-pos">(noun)</div>
<ol>
  <li>middle, half-way point</li>
  <li>excellent, wonderful</li>
</ol>"
`;

exports[`'$なかなかに強いです' > 'meaning (pos)' 1`] = `
"<div class="yomi-pos">(adverb, na-adjective)</div>
<ol>
  <li>very, considerably, easily, readily, fairly, quite, highly, rather</li>
</ol>
<div class="yomi-pos">(adverb)</div>
<ol>
  <li>by no means, not readily</li>
</ol>
<div class="yomi-pos">(noun)</div>
<ol>
  <li>middle, half-way point</li>
  <li>excellent, wonderful, very good</li>
</ol>"
`;

exports[`'$なかなかに強いです' > 'meaning (unnumbered) (item-full <= 2)' 1`] = `
"<ul>
  <li>very, considerably</li>
</ul>
<ul>
  <li>by no means, not readily</li>
</ul>
<ul>
  <li>middle, half-way point</li>
  <li>excellent, wonderful</li>
</ul>"
`;

exports[`'$なかなかに強いです' > 'meaning (unnumbered) (pos) (item-full…' 1`] = `
"<div class="yomi-pos">(adverb, na-adjective)</div>
<ul>
  <li>very, considerably</li>
</ul>
<div class="yomi-pos">(adverb)</div>
<ul>
  <li>by no means, not readily</li>
</ul>
<div class="yomi-pos">(noun)</div>
<ul>
  <li>middle, half-way point</li>
  <li>excellent, wonderful</li>
</ul>"
`;

exports[`'$なかなかに強いです' > 'meaning (unnumbered) (pos)' 1`] = `
"<div class="yomi-pos">(adverb, na-adjective)</div>
<ul>
  <li>very, considerably, easily, readily, fairly, quite, highly, rather</li>
</ul>
<div class="yomi-pos">(adverb)</div>
<ul>
  <li>by no means, not readily</li>
</ul>
<div class="yomi-pos">(noun)</div>
<ul>
  <li>middle, half-way point</li>
  <li>excellent, wonderful, very good</li>
</ul>"
`;

exports[`'$なかなかに強いです' > 'meaning (unnumbered)' 1`] = `
"<ul>
  <li>very, considerably, easily, readily, fairly, quite, highly, rather</li>
</ul>
<ul>
  <li>by no means, not readily</li>
</ul>
<ul>
  <li>middle, half-way point</li>
  <li>excellent, wonderful, very good</li>
</ul>"
`;

exports[`'$なかなかに強いです' > 'meaning (yomichan) (item-full <= 2)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>very</li>
        <li>considerably</li>
      </ul>
    </li>
    <li>
      <ul>
        <li>by no means</li>
        <li>not readily</li>
      </ul>
    </li>
    <li>
      <ul>
        <li>middle</li>
        <li>half-way point</li>
        <li>excellent</li>
        <li>wonderful</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (yomichan) (pos) (item-full <…' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(adverb, na-adjective)</i>
      <ul>
        <li>very</li>
        <li>considerably</li>
      </ul>
    </li>
    <li>
      <i>(adverb)</i>
      <ul>
        <li>by no means</li>
        <li>not readily</li>
      </ul>
    </li>
    <li>
      <i>(noun)</i>
      <ul>
        <li>middle</li>
        <li>half-way point</li>
        <li>excellent</li>
        <li>wonderful</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (yomichan) (pos)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(adverb, na-adjective)</i>
      <ul>
        <li>very</li>
        <li>considerably</li>
        <li>easily</li>
        <li>readily</li>
        <li>fairly</li>
        <li>quite</li>
        <li>highly</li>
        <li>rather</li>
      </ul>
    </li>
    <li>
      <i>(adverb)</i>
      <ul>
        <li>by no means</li>
        <li>not readily</li>
      </ul>
    </li>
    <li>
      <i>(noun)</i>
      <ul>
        <li>middle</li>
        <li>half-way point</li>
        <li>excellent</li>
        <li>wonderful</li>
        <li>very good</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning (yomichan)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>very</li>
        <li>considerably</li>
        <li>easily</li>
        <li>readily</li>
        <li>fairly</li>
        <li>quite</li>
        <li>highly</li>
        <li>rather</li>
      </ul>
    </li>
    <li>
      <ul>
        <li>by no means</li>
        <li>not readily</li>
      </ul>
    </li>
    <li>
      <ul>
        <li>middle</li>
        <li>half-way point</li>
        <li>excellent</li>
        <li>wonderful</li>
        <li>very good</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'$なかなかに強いです' > 'meaning' 1`] = `
"<ol>
  <li>very, considerably, easily, readily, fairly, quite, highly, rather</li>
</ol>
<ol>
  <li>by no means, not readily</li>
</ol>
<ol>
  <li>middle, half-way point</li>
  <li>excellent, wonderful, very good</li>
</ol>"
`;

exports[`'$なかなかに強いです' > 'sentence (bold) (furigana-anki)' 1`] = `"<b>なかなか</b>に 強[つよ]いです"`;

exports[`'$なかなかに強いです' > 'sentence (bold) (furigana-html)' 1`] = `"<b>なかなか</b>に&lt;ruby&gt;強&lt;rt&gt;つよ&lt;/rt&gt;&lt;/ruby&gt;いです"`;

exports[`'$なかなかに強いです' > 'sentence (bold) (kana)' 1`] = `"<b>なかなか</b>につよいです"`;

exports[`'$なかなかに強いです' > 'sentence (bold)' 1`] = `"<b>なかなか</b>に強いです"`;

exports[`'$なかなかに強いです' > 'sentence (cloze) (furigana-anki)' 1`] = `"{{c1::なかなか}}に 強[つよ]いです"`;

exports[`'$なかなかに強いです' > 'sentence (cloze) (furigana-html)' 1`] = `"{{c1::なかなか}}に&lt;ruby&gt;強&lt;rt&gt;つよ&lt;/rt&gt;&lt;/ruby&gt;いです"`;

exports[`'$なかなかに強いです' > 'sentence (cloze) (kana)' 1`] = `"{{c1::なかなか}}につよいです"`;

exports[`'$なかなかに強いです' > 'sentence (cloze)' 1`] = `"{{c1::なかなか}}に強いです"`;

exports[`'$なかなかに強いです' > 'sentence (furigana-anki)' 1`] = `"なかなかに 強[つよ]いです"`;

exports[`'$なかなかに強いです' > 'sentence (furigana-html)' 1`] = `"なかなかに&lt;ruby&gt;強&lt;rt&gt;つよ&lt;/rt&gt;&lt;/ruby&gt;いです"`;

exports[`'$なかなかに強いです' > 'sentence (kana)' 1`] = `"なかなかにつよいです"`;

exports[`'$なかなかに強いです' > 'sentence (span) (furigana-anki)' 1`] = `"<span class="yomi-word">なかなか</span>に 強[つよ]いです"`;

exports[`'$なかなかに強いです' > 'sentence (span) (furigana-html)' 1`] = `"<span class="yomi-word">なかなか</span>に&lt;ruby&gt;強&lt;rt&gt;つよ&lt;/rt&gt;&lt;/ruby&gt;いです"`;

exports[`'$なかなかに強いです' > 'sentence (span) (kana)' 1`] = `"<span class="yomi-word">なかなか</span>につよいです"`;

exports[`'$なかなかに強いです' > 'sentence (span)' 1`] = `"<span class="yomi-word">なかなか</span>に強いです"`;

exports[`'$なかなかに強いです' > 'sentence' 1`] = `"なかなかに強いです"`;

exports[`'$なかなかに強いです' > 'translated-sentence' 1`] = `"translation: なかなかに強いです"`;

exports[`'$なかなかに強いです' > 'url' 1`] = `"https://yomikiri.test/"`;

exports[`'$なかなかに強いです' > 'word (dict) (furigana-anki)' 1`] = `"中々[なかなか]"`;

exports[`'$なかなかに強いです' > 'word (dict) (furigana-html)' 1`] = `"<ruby>中々<rt>なかなか</rt></ruby>"`;

exports[`'$なかなかに強いです' > 'word (dict) (kana)' 1`] = `"なかなか"`;

exports[`'$なかなかに強いです' > 'word (dict)' 1`] = `"中々"`;

exports[`'$なかなかに強いです' > 'word (furigana-anki)' 1`] = `"なかなか"`;

exports[`'$なかなかに強いです' > 'word (furigana-html)' 1`] = `"なかなか"`;

exports[`'$なかなかに強いです' > 'word (kana)' 1`] = `"なかなか"`;

exports[`'$なかなかに強いです' > 'word (main-dict) (furigana-anki)' 1`] = `"中々[なかなか]"`;

exports[`'$なかなかに強いです' > 'word (main-dict) (furigana-html)' 1`] = `"<ruby>中々<rt>なかなか</rt></ruby>"`;

exports[`'$なかなかに強いです' > 'word (main-dict) (kana)' 1`] = `"なかなか"`;

exports[`'$なかなかに強いです' > 'word (main-dict)' 1`] = `"中々"`;

exports[`'$なかなかに強いです' > 'word' 1`] = `"なかなか"`;

exports[`'$なかなかに強いです' > (single) 'meaning (item-single <= 2)' 1`] = `"very, considerably"`;

exports[`'$なかなかに強いです' > (single) 'meaning (pos) (item-single <= 2)' 1`] = `"(adverb, na-adjective) very, considerably"`;

exports[`'$なかなかに強いです' > (single) 'meaning (pos)' 1`] = `"(adverb, na-adjective) very, considerably, easily, readily, fairly, quite, highly, rather"`;

exports[`'$なかなかに強いです' > (single) 'meaning' 1`] = `"very, considerably, easily, readily, fairly, quite, highly, rather"`;

exports[`'Special character is escaped: 図＄書<->' > '-' 1`] = `""`;

exports[`'Special character is escaped: 図＄書<->' > 'link' 1`] = `"<a href="https://yomikiri.test/">Yomikiri Tests</a>"`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (div) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">books</div>
    </div>
  </div>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (div) (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(noun)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">books</div>
    </div>
  </div>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (div) (pos)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(noun)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">books</div>
    </div>
  </div>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (div)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">books</div>
    </div>
  </div>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (item-full <= 2)' 1`] = `
"<ol>
  <li>books</li>
</ol>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (line) (item-full <= 2)' 1`] = `"books"`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (line) (pos) (item-full <= 2)' 1`] = `"(noun) books"`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (line) (pos)' 1`] = `"(noun) books"`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (line)' 1`] = `"books"`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-pos">(noun)</div>
<ol>
  <li>books</li>
</ol>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (pos)' 1`] = `
"<div class="yomi-pos">(noun)</div>
<ol>
  <li>books</li>
</ol>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (unnumbered) (item-full <= 2)' 1`] = `
"<ul>
  <li>books</li>
</ul>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (unnumbered) (pos) (item-full…' 1`] = `
"<div class="yomi-pos">(noun)</div>
<ul>
  <li>books</li>
</ul>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (unnumbered) (pos)' 1`] = `
"<div class="yomi-pos">(noun)</div>
<ul>
  <li>books</li>
</ul>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (unnumbered)' 1`] = `
"<ul>
  <li>books</li>
</ul>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (yomichan) (item-full <= 2)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>books</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (yomichan) (pos) (item-full <…' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(noun)</i>
      <ul>
        <li>books</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (yomichan) (pos)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(noun)</i>
      <ul>
        <li>books</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning (yomichan)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>books</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'meaning' 1`] = `
"<ol>
  <li>books</li>
</ol>"
`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (bold) (furigana-anki)' 1`] = `"<b>図書[としょ]</b>&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (bold) (furigana-html)' 1`] = `"<b>&lt;ruby&gt;図書&lt;rt&gt;としょ&lt;/rt&gt;&lt;/ruby&gt;</b>&amp;lt;-&amp;gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (bold) (kana)' 1`] = `"<b>としょ</b>&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (bold)' 1`] = `"<b>図書</b>&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (cloze) (furigana-anki)' 1`] = `"{{c1::図書[としょ]}}&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (cloze) (furigana-html)' 1`] = `"{{c1::&lt;ruby&gt;図書&lt;rt&gt;としょ&lt;/rt&gt;&lt;/ruby&gt;}}&amp;lt;-&amp;gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (cloze) (kana)' 1`] = `"{{c1::としょ}}&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (cloze)' 1`] = `"{{c1::図書}}&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (furigana-anki)' 1`] = `"図書[としょ]&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (furigana-html)' 1`] = `"&lt;ruby&gt;図書&lt;rt&gt;としょ&lt;/rt&gt;&lt;/ruby&gt;&amp;lt;-&amp;gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (kana)' 1`] = `"としょ&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (span) (furigana-anki)' 1`] = `"<span class="yomi-word">図書[としょ]</span>&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (span) (furigana-html)' 1`] = `"<span class="yomi-word">&lt;ruby&gt;図書&lt;rt&gt;としょ&lt;/rt&gt;&lt;/ruby&gt;</span>&amp;lt;-&amp;gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (span) (kana)' 1`] = `"<span class="yomi-word">としょ</span>&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence (span)' 1`] = `"<span class="yomi-word">図書</span>&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'sentence' 1`] = `"図書&lt;-&gt;"`;

exports[`'Special character is escaped: 図＄書<->' > 'translated-sentence' 1`] = `"translation: 図書<->"`;

exports[`'Special character is escaped: 図＄書<->' > 'url' 1`] = `"https://yomikiri.test/"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (dict) (furigana-anki)' 1`] = `"図書[としょ]"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (dict) (furigana-html)' 1`] = `"<ruby>図書<rt>としょ</rt></ruby>"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (dict) (kana)' 1`] = `"としょ"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (dict)' 1`] = `"図書"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (furigana-anki)' 1`] = `"図書[としょ]"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (furigana-html)' 1`] = `"<ruby>図書<rt>としょ</rt></ruby>"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (kana)' 1`] = `"としょ"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (main-dict) (furigana-anki)' 1`] = `"図書[としょ]"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (main-dict) (furigana-html)' 1`] = `"<ruby>図書<rt>としょ</rt></ruby>"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (main-dict) (kana)' 1`] = `"としょ"`;

exports[`'Special character is escaped: 図＄書<->' > 'word (main-dict)' 1`] = `"図書"`;

exports[`'Special character is escaped: 図＄書<->' > 'word' 1`] = `"図書"`;

exports[`'Special character is escaped: 図＄書<->' > (single) 'meaning (item-single <= 2)' 1`] = `"books"`;

exports[`'Special character is escaped: 図＄書<->' > (single) 'meaning (pos) (item-single <= 2)' 1`] = `"(noun) books"`;

exports[`'Special character is escaped: 図＄書<->' > (single) 'meaning (pos)' 1`] = `"(noun) books"`;

exports[`'Special character is escaped: 図＄書<->' > (single) 'meaning' 1`] = `"books"`;

exports[`'Unicode normalization: 彼か＄゙学生' > '-' 1`] = `""`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'link' 1`] = `"<a href="https://yomikiri.test/">Yomikiri Tests</a>"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (div) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">indicates the subject of a sentence</div>
      <div class="yomi-meaning">indicates possession</div>
      <div class="yomi-meaning">and</div>
      <div class="yomi-meaning">used after an introductory remark or explanation</div>
      <div class="yomi-meaning">regardless of ..., whether ... (or not)</div>
      <div class="yomi-meaning">indicates a desire or hope</div>
      <div class="yomi-meaning">softens a statement</div>
      <div class="yomi-meaning">indicates doubt</div>
      <div class="yomi-meaning">indicates scorn</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">but, however</div>
    </div>
  </div>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (div) (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(particle)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">indicates the subject of a sentence</div>
      <div class="yomi-meaning">indicates possession</div>
      <div class="yomi-meaning">and</div>
      <div class="yomi-meaning">used after an introductory remark or explanation</div>
      <div class="yomi-meaning">regardless of ..., whether ... (or not)</div>
      <div class="yomi-meaning">indicates a desire or hope</div>
      <div class="yomi-meaning">softens a statement</div>
      <div class="yomi-meaning">indicates doubt</div>
      <div class="yomi-meaning">indicates scorn</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-pos">(conjunction, particle)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">but, however</div>
    </div>
  </div>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (div) (pos)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(particle)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">indicates the subject of a sentence</div>
      <div class="yomi-meaning">indicates possession</div>
      <div class="yomi-meaning">and</div>
      <div class="yomi-meaning">used after an introductory remark or explanation</div>
      <div class="yomi-meaning">regardless of ..., whether ... (or not), no matter ...</div>
      <div class="yomi-meaning">indicates a desire or hope</div>
      <div class="yomi-meaning">softens a statement</div>
      <div class="yomi-meaning">indicates doubt</div>
      <div class="yomi-meaning">indicates scorn</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-pos">(conjunction, particle)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">but, however, (and) yet, though, although, while</div>
    </div>
  </div>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (div)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">indicates the subject of a sentence</div>
      <div class="yomi-meaning">indicates possession</div>
      <div class="yomi-meaning">and</div>
      <div class="yomi-meaning">used after an introductory remark or explanation</div>
      <div class="yomi-meaning">regardless of ..., whether ... (or not), no matter ...</div>
      <div class="yomi-meaning">indicates a desire or hope</div>
      <div class="yomi-meaning">softens a statement</div>
      <div class="yomi-meaning">indicates doubt</div>
      <div class="yomi-meaning">indicates scorn</div>
    </div>
  </div>
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">but, however, (and) yet, though, although, while</div>
    </div>
  </div>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (item-full <= 2)' 1`] = `
"<ol>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not)</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ol>
<ol>
  <li>but, however</li>
</ol>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (line) (item-full <= 2)' 1`] = `"indicates the subject of a sentence; indicates possession; and; used after an introductory remark or explanation; regardless of ..., whether ... (or not); indicates a desire or hope; softens a statement; indicates doubt; indicates scorn; but, however"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (line) (pos) (item-full <= 2)' 1`] = `"(particle) indicates the subject of a sentence; indicates possession; and; used after an introductory remark or explanation; regardless of ..., whether ... (or not); indicates a desire or hope; softens a statement; indicates doubt; indicates scorn; (conjunction, particle) but, however"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (line) (pos)' 1`] = `"(particle) indicates the subject of a sentence; indicates possession; and; used after an introductory remark or explanation; regardless of ..., whether ... (or not), no matter ...; indicates a desire or hope; softens a statement; indicates doubt; indicates scorn; (conjunction, particle) but, however, (and) yet, though, although, while"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (line)' 1`] = `"indicates the subject of a sentence; indicates possession; and; used after an introductory remark or explanation; regardless of ..., whether ... (or not), no matter ...; indicates a desire or hope; softens a statement; indicates doubt; indicates scorn; but, however, (and) yet, though, although, while"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-pos">(particle)</div>
<ol>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not)</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ol>
<div class="yomi-pos">(conjunction, particle)</div>
<ol>
  <li>but, however</li>
</ol>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (pos)' 1`] = `
"<div class="yomi-pos">(particle)</div>
<ol>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not), no matter ...</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ol>
<div class="yomi-pos">(conjunction, particle)</div>
<ol>
  <li>but, however, (and) yet, though, although, while</li>
</ol>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (unnumbered) (item-full <= 2)' 1`] = `
"<ul>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not)</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ul>
<ul>
  <li>but, however</li>
</ul>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (unnumbered) (pos) (item-full…' 1`] = `
"<div class="yomi-pos">(particle)</div>
<ul>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not)</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ul>
<div class="yomi-pos">(conjunction, particle)</div>
<ul>
  <li>but, however</li>
</ul>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (unnumbered) (pos)' 1`] = `
"<div class="yomi-pos">(particle)</div>
<ul>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not), no matter ...</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ul>
<div class="yomi-pos">(conjunction, particle)</div>
<ul>
  <li>but, however, (and) yet, though, although, while</li>
</ul>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (unnumbered)' 1`] = `
"<ul>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not), no matter ...</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ul>
<ul>
  <li>but, however, (and) yet, though, although, while</li>
</ul>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (yomichan) (item-full <= 2)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>indicates the subject of a sentence</li>
        <li>indicates possession</li>
        <li>and</li>
        <li>used after an introductory remark or explanation</li>
        <li>regardless of ...</li>
        <li>whether ... (or not)</li>
        <li>indicates a desire or hope</li>
        <li>softens a statement</li>
        <li>indicates doubt</li>
        <li>indicates scorn</li>
      </ul>
    </li>
    <li>
      <ul>
        <li>but</li>
        <li>however</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (yomichan) (pos) (item-full <…' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(particle)</i>
      <ul>
        <li>indicates the subject of a sentence</li>
        <li>indicates possession</li>
        <li>and</li>
        <li>used after an introductory remark or explanation</li>
        <li>regardless of ...</li>
        <li>whether ... (or not)</li>
        <li>indicates a desire or hope</li>
        <li>softens a statement</li>
        <li>indicates doubt</li>
        <li>indicates scorn</li>
      </ul>
    </li>
    <li>
      <i>(conjunction, particle)</i>
      <ul>
        <li>but</li>
        <li>however</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (yomichan) (pos)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(particle)</i>
      <ul>
        <li>indicates the subject of a sentence</li>
        <li>indicates possession</li>
        <li>and</li>
        <li>used after an introductory remark or explanation</li>
        <li>regardless of ...</li>
        <li>whether ... (or not)</li>
        <li>no matter ...</li>
        <li>indicates a desire or hope</li>
        <li>softens a statement</li>
        <li>indicates doubt</li>
        <li>indicates scorn</li>
      </ul>
    </li>
    <li>
      <i>(conjunction, particle)</i>
      <ul>
        <li>but</li>
        <li>however</li>
        <li>(and) yet</li>
        <li>though</li>
        <li>although</li>
        <li>while</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning (yomichan)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>indicates the subject of a sentence</li>
        <li>indicates possession</li>
        <li>and</li>
        <li>used after an introductory remark or explanation</li>
        <li>regardless of ...</li>
        <li>whether ... (or not)</li>
        <li>no matter ...</li>
        <li>indicates a desire or hope</li>
        <li>softens a statement</li>
        <li>indicates doubt</li>
        <li>indicates scorn</li>
      </ul>
    </li>
    <li>
      <ul>
        <li>but</li>
        <li>however</li>
        <li>(and) yet</li>
        <li>though</li>
        <li>although</li>
        <li>while</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'meaning' 1`] = `
"<ol>
  <li>indicates the subject of a sentence</li>
  <li>indicates possession</li>
  <li>and</li>
  <li>used after an introductory remark or explanation</li>
  <li>regardless of ..., whether ... (or not), no matter ...</li>
  <li>indicates a desire or hope</li>
  <li>softens a statement</li>
  <li>indicates doubt</li>
  <li>indicates scorn</li>
</ol>
<ol>
  <li>but, however, (and) yet, though, although, while</li>
</ol>"
`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (bold) (furigana-anki)' 1`] = `"彼[かれ]<b>が</b>学生[がくせい]"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (bold) (furigana-html)' 1`] = `"&lt;ruby&gt;彼&lt;rt&gt;かれ&lt;/rt&gt;&lt;/ruby&gt;<b>が</b>&lt;ruby&gt;学生&lt;rt&gt;がくせい&lt;/rt&gt;&lt;/ruby&gt;"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (bold) (kana)' 1`] = `"かれ<b>が</b>がくせい"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (bold)' 1`] = `"彼<b>が</b>学生"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (cloze) (furigana-anki)' 1`] = `"彼[かれ]{{c1::が}}学生[がくせい]"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (cloze) (furigana-html)' 1`] = `"&lt;ruby&gt;彼&lt;rt&gt;かれ&lt;/rt&gt;&lt;/ruby&gt;{{c1::が}}&lt;ruby&gt;学生&lt;rt&gt;がくせい&lt;/rt&gt;&lt;/ruby&gt;"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (cloze) (kana)' 1`] = `"かれ{{c1::が}}がくせい"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (cloze)' 1`] = `"彼{{c1::が}}学生"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (furigana-anki)' 1`] = `"彼[かれ]が学生[がくせい]"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (furigana-html)' 1`] = `"&lt;ruby&gt;彼&lt;rt&gt;かれ&lt;/rt&gt;&lt;/ruby&gt;が&lt;ruby&gt;学生&lt;rt&gt;がくせい&lt;/rt&gt;&lt;/ruby&gt;"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (kana)' 1`] = `"かれががくせい"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (span) (furigana-anki)' 1`] = `"彼[かれ]<span class="yomi-word">が</span>学生[がくせい]"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (span) (furigana-html)' 1`] = `"&lt;ruby&gt;彼&lt;rt&gt;かれ&lt;/rt&gt;&lt;/ruby&gt;<span class="yomi-word">が</span>&lt;ruby&gt;学生&lt;rt&gt;がくせい&lt;/rt&gt;&lt;/ruby&gt;"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (span) (kana)' 1`] = `"かれ<span class="yomi-word">が</span>がくせい"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence (span)' 1`] = `"彼<span class="yomi-word">が</span>学生"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'sentence' 1`] = `"彼が学生"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'translated-sentence' 1`] = `"translation: 彼が学生"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'url' 1`] = `"https://yomikiri.test/"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (dict) (furigana-anki)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (dict) (furigana-html)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (dict) (kana)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (dict)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (furigana-anki)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (furigana-html)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (kana)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (main-dict) (furigana-anki)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (main-dict) (furigana-html)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (main-dict) (kana)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word (main-dict)' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > 'word' 1`] = `"が"`;

exports[`'Unicode normalization: 彼か＄゙学生' > (single) 'meaning (item-single <= 2)' 1`] = `"indicates the subject of a sentence"`;

exports[`'Unicode normalization: 彼か＄゙学生' > (single) 'meaning (pos) (item-single <= 2)' 1`] = `"(particle) indicates the subject of a sentence"`;

exports[`'Unicode normalization: 彼か＄゙学生' > (single) 'meaning (pos)' 1`] = `"(particle) indicates the subject of a sentence"`;

exports[`'Unicode normalization: 彼か＄゙学生' > (single) 'meaning' 1`] = `"indicates the subject of a sentence"`;

exports[`'春の茶が飲＄みたいです' > '-' 1`] = `""`;

exports[`'春の茶が飲＄みたいです' > 'link' 1`] = `"<a href="https://yomikiri.test/">Yomikiri Tests</a>"`;

exports[`'春の茶が飲＄みたいです' > 'meaning (div) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">to drink, to gulp</div>
      <div class="yomi-meaning">to smoke (tobacco)</div>
      <div class="yomi-meaning">to engulf, to overwhelm</div>
      <div class="yomi-meaning">to keep down, to suppress</div>
      <div class="yomi-meaning">to accept (e.g. demand, condition)</div>
      <div class="yomi-meaning">to make light of, to conceal</div>
    </div>
  </div>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (div) (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(verb)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">to drink, to gulp</div>
      <div class="yomi-meaning">to smoke (tobacco)</div>
      <div class="yomi-meaning">to engulf, to overwhelm</div>
      <div class="yomi-meaning">to keep down, to suppress</div>
      <div class="yomi-meaning">to accept (e.g. demand, condition)</div>
      <div class="yomi-meaning">to make light of, to conceal</div>
    </div>
  </div>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (div) (pos)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(verb)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">to drink, to gulp, to swallow, to take (medicine)</div>
      <div class="yomi-meaning">to smoke (tobacco)</div>
      <div class="yomi-meaning">to engulf, to overwhelm</div>
      <div class="yomi-meaning">to keep down, to suppress</div>
      <div class="yomi-meaning">to accept (e.g. demand, condition)</div>
      <div class="yomi-meaning">to make light of, to conceal</div>
    </div>
  </div>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (div)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">to drink, to gulp, to swallow, to take (medicine)</div>
      <div class="yomi-meaning">to smoke (tobacco)</div>
      <div class="yomi-meaning">to engulf, to overwhelm</div>
      <div class="yomi-meaning">to keep down, to suppress</div>
      <div class="yomi-meaning">to accept (e.g. demand, condition)</div>
      <div class="yomi-meaning">to make light of, to conceal</div>
    </div>
  </div>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (item-full <= 2)' 1`] = `
"<ol>
  <li>to drink, to gulp</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ol>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (line) (item-full <= 2)' 1`] = `"to drink, to gulp; to smoke (tobacco); to engulf, to overwhelm; to keep down, to suppress; to accept (e.g. demand, condition); to make light of, to conceal"`;

exports[`'春の茶が飲＄みたいです' > 'meaning (line) (pos) (item-full <= 2)' 1`] = `"(verb) to drink, to gulp; to smoke (tobacco); to engulf, to overwhelm; to keep down, to suppress; to accept (e.g. demand, condition); to make light of, to conceal"`;

exports[`'春の茶が飲＄みたいです' > 'meaning (line) (pos)' 1`] = `"(verb) to drink, to gulp, to swallow, to take (medicine); to smoke (tobacco); to engulf, to overwhelm; to keep down, to suppress; to accept (e.g. demand, condition); to make light of, to conceal"`;

exports[`'春の茶が飲＄みたいです' > 'meaning (line)' 1`] = `"to drink, to gulp, to swallow, to take (medicine); to smoke (tobacco); to engulf, to overwhelm; to keep down, to suppress; to accept (e.g. demand, condition); to make light of, to conceal"`;

exports[`'春の茶が飲＄みたいです' > 'meaning (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ol>
  <li>to drink, to gulp</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ol>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (pos)' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ol>
  <li>to drink, to gulp, to swallow, to take (medicine)</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ol>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (unnumbered) (item-full <= 2)' 1`] = `
"<ul>
  <li>to drink, to gulp</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ul>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (unnumbered) (pos) (item-full…' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ul>
  <li>to drink, to gulp</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ul>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (unnumbered) (pos)' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ul>
  <li>to drink, to gulp, to swallow, to take (medicine)</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ul>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (unnumbered)' 1`] = `
"<ul>
  <li>to drink, to gulp, to swallow, to take (medicine)</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ul>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (yomichan) (item-full <= 2)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>to drink</li>
        <li>to gulp</li>
        <li>to smoke (tobacco)</li>
        <li>to engulf</li>
        <li>to overwhelm</li>
        <li>to keep down</li>
        <li>to suppress</li>
        <li>to accept (e.g. demand, condition)</li>
        <li>to make light of</li>
        <li>to conceal</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (yomichan) (pos) (item-full <…' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(verb)</i>
      <ul>
        <li>to drink</li>
        <li>to gulp</li>
        <li>to smoke (tobacco)</li>
        <li>to engulf</li>
        <li>to overwhelm</li>
        <li>to keep down</li>
        <li>to suppress</li>
        <li>to accept (e.g. demand, condition)</li>
        <li>to make light of</li>
        <li>to conceal</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (yomichan) (pos)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(verb)</i>
      <ul>
        <li>to drink</li>
        <li>to gulp</li>
        <li>to swallow</li>
        <li>to take (medicine)</li>
        <li>to smoke (tobacco)</li>
        <li>to engulf</li>
        <li>to overwhelm</li>
        <li>to keep down</li>
        <li>to suppress</li>
        <li>to accept (e.g. demand, condition)</li>
        <li>to make light of</li>
        <li>to conceal</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning (yomichan)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>to drink</li>
        <li>to gulp</li>
        <li>to swallow</li>
        <li>to take (medicine)</li>
        <li>to smoke (tobacco)</li>
        <li>to engulf</li>
        <li>to overwhelm</li>
        <li>to keep down</li>
        <li>to suppress</li>
        <li>to accept (e.g. demand, condition)</li>
        <li>to make light of</li>
        <li>to conceal</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'春の茶が飲＄みたいです' > 'meaning' 1`] = `
"<ol>
  <li>to drink, to gulp, to swallow, to take (medicine)</li>
  <li>to smoke (tobacco)</li>
  <li>to engulf, to overwhelm</li>
  <li>to keep down, to suppress</li>
  <li>to accept (e.g. demand, condition)</li>
  <li>to make light of, to conceal</li>
</ol>"
`;

exports[`'春の茶が飲＄みたいです' > 'sentence (bold) (furigana-anki)' 1`] = `"春[はる]の 茶[ちゃ]が<b>飲[の]みたいです</b>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (bold) (furigana-html)' 1`] = `"&lt;ruby&gt;春&lt;rt&gt;はる&lt;/rt&gt;&lt;/ruby&gt;の&lt;ruby&gt;茶&lt;rt&gt;ちゃ&lt;/rt&gt;&lt;/ruby&gt;が<b>&lt;ruby&gt;飲&lt;rt&gt;の&lt;/rt&gt;&lt;/ruby&gt;みたいです</b>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (bold) (kana)' 1`] = `"はるのちゃが<b>のみたいです</b>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (bold)' 1`] = `"春の茶が<b>飲みたいです</b>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (cloze) (furigana-anki)' 1`] = `"春[はる]の 茶[ちゃ]が{{c1::飲[の]みたいです}}"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (cloze) (furigana-html)' 1`] = `"&lt;ruby&gt;春&lt;rt&gt;はる&lt;/rt&gt;&lt;/ruby&gt;の&lt;ruby&gt;茶&lt;rt&gt;ちゃ&lt;/rt&gt;&lt;/ruby&gt;が{{c1::&lt;ruby&gt;飲&lt;rt&gt;の&lt;/rt&gt;&lt;/ruby&gt;みたいです}}"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (cloze) (kana)' 1`] = `"はるのちゃが{{c1::のみたいです}}"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (cloze)' 1`] = `"春の茶が{{c1::飲みたいです}}"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (furigana-anki)' 1`] = `"春[はる]の 茶[ちゃ]が飲[の]みたいです"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (furigana-html)' 1`] = `"&lt;ruby&gt;春&lt;rt&gt;はる&lt;/rt&gt;&lt;/ruby&gt;の&lt;ruby&gt;茶&lt;rt&gt;ちゃ&lt;/rt&gt;&lt;/ruby&gt;が&lt;ruby&gt;飲&lt;rt&gt;の&lt;/rt&gt;&lt;/ruby&gt;みたいです"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (kana)' 1`] = `"はるのちゃがのみたいです"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (span) (furigana-anki)' 1`] = `"春[はる]の 茶[ちゃ]が<span class="yomi-word">飲[の]みたいです</span>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (span) (furigana-html)' 1`] = `"&lt;ruby&gt;春&lt;rt&gt;はる&lt;/rt&gt;&lt;/ruby&gt;の&lt;ruby&gt;茶&lt;rt&gt;ちゃ&lt;/rt&gt;&lt;/ruby&gt;が<span class="yomi-word">&lt;ruby&gt;飲&lt;rt&gt;の&lt;/rt&gt;&lt;/ruby&gt;みたいです</span>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (span) (kana)' 1`] = `"はるのちゃが<span class="yomi-word">のみたいです</span>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence (span)' 1`] = `"春の茶が<span class="yomi-word">飲みたいです</span>"`;

exports[`'春の茶が飲＄みたいです' > 'sentence' 1`] = `"春の茶が飲みたいです"`;

exports[`'春の茶が飲＄みたいです' > 'translated-sentence' 1`] = `"translation: 春の茶が飲みたいです"`;

exports[`'春の茶が飲＄みたいです' > 'url' 1`] = `"https://yomikiri.test/"`;

exports[`'春の茶が飲＄みたいです' > 'word (dict) (furigana-anki)' 1`] = `"飲[の]む"`;

exports[`'春の茶が飲＄みたいです' > 'word (dict) (furigana-html)' 1`] = `"<ruby>飲<rt>の</rt></ruby>む"`;

exports[`'春の茶が飲＄みたいです' > 'word (dict) (kana)' 1`] = `"のむ"`;

exports[`'春の茶が飲＄みたいです' > 'word (dict)' 1`] = `"飲む"`;

exports[`'春の茶が飲＄みたいです' > 'word (furigana-anki)' 1`] = `"飲[の]みたいです"`;

exports[`'春の茶が飲＄みたいです' > 'word (furigana-html)' 1`] = `"<ruby>飲<rt>の</rt></ruby>みたいです"`;

exports[`'春の茶が飲＄みたいです' > 'word (kana)' 1`] = `"のみたいです"`;

exports[`'春の茶が飲＄みたいです' > 'word (main-dict) (furigana-anki)' 1`] = `"飲[の]む"`;

exports[`'春の茶が飲＄みたいです' > 'word (main-dict) (furigana-html)' 1`] = `"<ruby>飲<rt>の</rt></ruby>む"`;

exports[`'春の茶が飲＄みたいです' > 'word (main-dict) (kana)' 1`] = `"のむ"`;

exports[`'春の茶が飲＄みたいです' > 'word (main-dict)' 1`] = `"飲む"`;

exports[`'春の茶が飲＄みたいです' > 'word' 1`] = `"飲みたいです"`;

exports[`'春の茶が飲＄みたいです' > (single) 'meaning (item-single <= 2)' 1`] = `"to drink, to gulp"`;

exports[`'春の茶が飲＄みたいです' > (single) 'meaning (pos) (item-single <= 2)' 1`] = `"(verb) to drink, to gulp"`;

exports[`'春の茶が飲＄みたいです' > (single) 'meaning (pos)' 1`] = `"(verb) to drink, to gulp, to swallow, to take (medicine)"`;

exports[`'春の茶が飲＄みたいです' > (single) 'meaning' 1`] = `"to drink, to gulp, to swallow, to take (medicine)"`;

exports[`'＄読みたい' > '-' 1`] = `""`;

exports[`'＄読みたい' > 'link' 1`] = `"<a href="https://yomikiri.test/">Yomikiri Tests</a>"`;

exports[`'＄読みたい' > 'meaning (div) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">to read</div>
      <div class="yomi-meaning">to recite (e.g. a sutra), to chant</div>
      <div class="yomi-meaning">to predict, to guess</div>
      <div class="yomi-meaning">to pronounce, to read (e.g. a kanji)</div>
      <div class="yomi-meaning">to decipher, to read (a meter, graph, music, etc.)</div>
      <div class="yomi-meaning">to count, to estimate</div>
      <div class="yomi-meaning">to read (a kanji) with its native Japanese reading</div>
    </div>
  </div>
</div>"
`;

exports[`'＄読みたい' > 'meaning (div) (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(verb)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">to read</div>
      <div class="yomi-meaning">to recite (e.g. a sutra), to chant</div>
      <div class="yomi-meaning">to predict, to guess</div>
      <div class="yomi-meaning">to pronounce, to read (e.g. a kanji)</div>
      <div class="yomi-meaning">to decipher, to read (a meter, graph, music, etc.)</div>
      <div class="yomi-meaning">to count, to estimate</div>
      <div class="yomi-meaning">to read (a kanji) with its native Japanese reading</div>
    </div>
  </div>
</div>"
`;

exports[`'＄読みたい' > 'meaning (div) (pos)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-pos">(verb)</div>
    <div class="yomi-meanings">
      <div class="yomi-meaning">to read</div>
      <div class="yomi-meaning">to recite (e.g. a sutra), to chant</div>
      <div class="yomi-meaning">to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine</div>
      <div class="yomi-meaning">to pronounce, to read (e.g. a kanji)</div>
      <div class="yomi-meaning">to decipher, to read (a meter, graph, music, etc.), to tell (the time)</div>
      <div class="yomi-meaning">to count, to estimate</div>
      <div class="yomi-meaning">to read (a kanji) with its native Japanese reading</div>
    </div>
  </div>
</div>"
`;

exports[`'＄読みたい' > 'meaning (div)' 1`] = `
"<div class="yomi-entry">
  <div class="yomi-group">
    <div class="yomi-meanings">
      <div class="yomi-meaning">to read</div>
      <div class="yomi-meaning">to recite (e.g. a sutra), to chant</div>
      <div class="yomi-meaning">to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine</div>
      <div class="yomi-meaning">to pronounce, to read (e.g. a kanji)</div>
      <div class="yomi-meaning">to decipher, to read (a meter, graph, music, etc.), to tell (the time)</div>
      <div class="yomi-meaning">to count, to estimate</div>
      <div class="yomi-meaning">to read (a kanji) with its native Japanese reading</div>
    </div>
  </div>
</div>"
`;

exports[`'＄読みたい' > 'meaning (item-full <= 2)' 1`] = `
"<ol>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ol>"
`;

exports[`'＄読みたい' > 'meaning (line) (item-full <= 2)' 1`] = `"to read; to recite (e.g. a sutra), to chant; to predict, to guess; to pronounce, to read (e.g. a kanji); to decipher, to read (a meter, graph, music, etc.); to count, to estimate; to read (a kanji) with its native Japanese reading"`;

exports[`'＄読みたい' > 'meaning (line) (pos) (item-full <= 2)' 1`] = `"(verb) to read; to recite (e.g. a sutra), to chant; to predict, to guess; to pronounce, to read (e.g. a kanji); to decipher, to read (a meter, graph, music, etc.); to count, to estimate; to read (a kanji) with its native Japanese reading"`;

exports[`'＄読みたい' > 'meaning (line) (pos)' 1`] = `"(verb) to read; to recite (e.g. a sutra), to chant; to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine; to pronounce, to read (e.g. a kanji); to decipher, to read (a meter, graph, music, etc.), to tell (the time); to count, to estimate; to read (a kanji) with its native Japanese reading"`;

exports[`'＄読みたい' > 'meaning (line)' 1`] = `"to read; to recite (e.g. a sutra), to chant; to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine; to pronounce, to read (e.g. a kanji); to decipher, to read (a meter, graph, music, etc.), to tell (the time); to count, to estimate; to read (a kanji) with its native Japanese reading"`;

exports[`'＄読みたい' > 'meaning (pos) (item-full <= 2)' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ol>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ol>"
`;

exports[`'＄読みたい' > 'meaning (pos)' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ol>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.), to tell (the time)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ol>"
`;

exports[`'＄読みたい' > 'meaning (unnumbered) (item-full <= 2)' 1`] = `
"<ul>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ul>"
`;

exports[`'＄読みたい' > 'meaning (unnumbered) (pos) (item-full…' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ul>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ul>"
`;

exports[`'＄読みたい' > 'meaning (unnumbered) (pos)' 1`] = `
"<div class="yomi-pos">(verb)</div>
<ul>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.), to tell (the time)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ul>"
`;

exports[`'＄読みたい' > 'meaning (unnumbered)' 1`] = `
"<ul>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.), to tell (the time)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ul>"
`;

exports[`'＄読みたい' > 'meaning (yomichan) (item-full <= 2)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>to read</li>
        <li>to recite (e.g. a sutra)</li>
        <li>to chant</li>
        <li>to predict</li>
        <li>to guess</li>
        <li>to pronounce</li>
        <li>to read (e.g. a kanji)</li>
        <li>to decipher</li>
        <li>to read (a meter, graph, music, etc.)</li>
        <li>to count</li>
        <li>to estimate</li>
        <li>to read (a kanji) with its native Japanese reading</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'＄読みたい' > 'meaning (yomichan) (pos) (item-full <…' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(verb)</i>
      <ul>
        <li>to read</li>
        <li>to recite (e.g. a sutra)</li>
        <li>to chant</li>
        <li>to predict</li>
        <li>to guess</li>
        <li>to pronounce</li>
        <li>to read (e.g. a kanji)</li>
        <li>to decipher</li>
        <li>to read (a meter, graph, music, etc.)</li>
        <li>to count</li>
        <li>to estimate</li>
        <li>to read (a kanji) with its native Japanese reading</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'＄読みたい' > 'meaning (yomichan) (pos)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <i>(verb)</i>
      <ul>
        <li>to read</li>
        <li>to recite (e.g. a sutra)</li>
        <li>to chant</li>
        <li>to predict</li>
        <li>to guess</li>
        <li>to forecast</li>
        <li>to read (someone's thoughts)</li>
        <li>to see (e.g. into someone's heart)</li>
        <li>to divine</li>
        <li>to pronounce</li>
        <li>to read (e.g. a kanji)</li>
        <li>to decipher</li>
        <li>to read (a meter, graph, music, etc.)</li>
        <li>to tell (the time)</li>
        <li>to count</li>
        <li>to estimate</li>
        <li>to read (a kanji) with its native Japanese reading</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'＄読みたい' > 'meaning (yomichan)' 1`] = `
"<div style="text-align: left;">
  <ol>
    <li>
      <ul>
        <li>to read</li>
        <li>to recite (e.g. a sutra)</li>
        <li>to chant</li>
        <li>to predict</li>
        <li>to guess</li>
        <li>to forecast</li>
        <li>to read (someone's thoughts)</li>
        <li>to see (e.g. into someone's heart)</li>
        <li>to divine</li>
        <li>to pronounce</li>
        <li>to read (e.g. a kanji)</li>
        <li>to decipher</li>
        <li>to read (a meter, graph, music, etc.)</li>
        <li>to tell (the time)</li>
        <li>to count</li>
        <li>to estimate</li>
        <li>to read (a kanji) with its native Japanese reading</li>
      </ul>
    </li>
  </ol>
</div>"
`;

exports[`'＄読みたい' > 'meaning' 1`] = `
"<ol>
  <li>to read</li>
  <li>to recite (e.g. a sutra), to chant</li>
  <li>to predict, to guess, to forecast, to read (someone's thoughts), to see (e.g. into someone's heart), to divine</li>
  <li>to pronounce, to read (e.g. a kanji)</li>
  <li>to decipher, to read (a meter, graph, music, etc.), to tell (the time)</li>
  <li>to count, to estimate</li>
  <li>to read (a kanji) with its native Japanese reading</li>
</ol>"
`;

exports[`'＄読みたい' > 'sentence (bold) (furigana-anki)' 1`] = `"<b>読[よ]みたい</b>"`;

exports[`'＄読みたい' > 'sentence (bold) (furigana-html)' 1`] = `"<b>&lt;ruby&gt;読&lt;rt&gt;よ&lt;/rt&gt;&lt;/ruby&gt;みたい</b>"`;

exports[`'＄読みたい' > 'sentence (bold) (kana)' 1`] = `"<b>よみたい</b>"`;

exports[`'＄読みたい' > 'sentence (bold)' 1`] = `"<b>読みたい</b>"`;

exports[`'＄読みたい' > 'sentence (cloze) (furigana-anki)' 1`] = `"{{c1::読[よ]みたい}}"`;

exports[`'＄読みたい' > 'sentence (cloze) (furigana-html)' 1`] = `"{{c1::&lt;ruby&gt;読&lt;rt&gt;よ&lt;/rt&gt;&lt;/ruby&gt;みたい}}"`;

exports[`'＄読みたい' > 'sentence (cloze) (kana)' 1`] = `"{{c1::よみたい}}"`;

exports[`'＄読みたい' > 'sentence (cloze)' 1`] = `"{{c1::読みたい}}"`;

exports[`'＄読みたい' > 'sentence (furigana-anki)' 1`] = `"読[よ]みたい"`;

exports[`'＄読みたい' > 'sentence (furigana-html)' 1`] = `"&lt;ruby&gt;読&lt;rt&gt;よ&lt;/rt&gt;&lt;/ruby&gt;みたい"`;

exports[`'＄読みたい' > 'sentence (kana)' 1`] = `"よみたい"`;

exports[`'＄読みたい' > 'sentence (span) (furigana-anki)' 1`] = `"<span class="yomi-word">読[よ]みたい</span>"`;

exports[`'＄読みたい' > 'sentence (span) (furigana-html)' 1`] = `"<span class="yomi-word">&lt;ruby&gt;読&lt;rt&gt;よ&lt;/rt&gt;&lt;/ruby&gt;みたい</span>"`;

exports[`'＄読みたい' > 'sentence (span) (kana)' 1`] = `"<span class="yomi-word">よみたい</span>"`;

exports[`'＄読みたい' > 'sentence (span)' 1`] = `"<span class="yomi-word">読みたい</span>"`;

exports[`'＄読みたい' > 'sentence' 1`] = `"読みたい"`;

exports[`'＄読みたい' > 'translated-sentence' 1`] = `"translation: 読みたい"`;

exports[`'＄読みたい' > 'url' 1`] = `"https://yomikiri.test/"`;

exports[`'＄読みたい' > 'word (dict) (furigana-anki)' 1`] = `"読[よ]む"`;

exports[`'＄読みたい' > 'word (dict) (furigana-html)' 1`] = `"<ruby>読<rt>よ</rt></ruby>む"`;

exports[`'＄読みたい' > 'word (dict) (kana)' 1`] = `"よむ"`;

exports[`'＄読みたい' > 'word (dict)' 1`] = `"読む"`;

exports[`'＄読みたい' > 'word (furigana-anki)' 1`] = `"読[よ]みたい"`;

exports[`'＄読みたい' > 'word (furigana-html)' 1`] = `"<ruby>読<rt>よ</rt></ruby>みたい"`;

exports[`'＄読みたい' > 'word (kana)' 1`] = `"よみたい"`;

exports[`'＄読みたい' > 'word (main-dict) (furigana-anki)' 1`] = `"読[よ]む"`;

exports[`'＄読みたい' > 'word (main-dict) (furigana-html)' 1`] = `"<ruby>読<rt>よ</rt></ruby>む"`;

exports[`'＄読みたい' > 'word (main-dict) (kana)' 1`] = `"よむ"`;

exports[`'＄読みたい' > 'word (main-dict)' 1`] = `"読む"`;

exports[`'＄読みたい' > 'word' 1`] = `"読みたい"`;

exports[`'＄読みたい' > (single) 'meaning (item-single <= 2)' 1`] = `"to read"`;

exports[`'＄読みたい' > (single) 'meaning (pos) (item-single <= 2)' 1`] = `"(verb) to read"`;

exports[`'＄読みたい' > (single) 'meaning (pos)' 1`] = `"(verb) to read"`;

exports[`'＄読みたい' > (single) 'meaning' 1`] = `"to read"`;
